--- a/NAAMII_2021_RL_Project.ipynb
+++ b/NAAMII_2021_RL_Project.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "NAAMII 2021 - RL Project.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOgaAXBCqYKcs5Ohey2WmVh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jdmartin86/2021-naamii-rl-practical/blob/main/NAAMII_2021_RL_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Supriya090/2021-naamii-rl-practical/blob/main/NAAMII_2021_RL_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -72,13 +71,12 @@
         "import matplotlib.cm as cm\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 42,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "Q7e4fUtYYdY_"
       },
       "source": [
@@ -183,7 +181,7 @@
         "\n",
         "    ax.grid(which='major', linestyle='--')\n"
       ],
-      "execution_count": 30,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -194,14 +192,14 @@
           "height": 269
         },
         "id": "fJfY5rbVxvom",
-        "outputId": "8e0b2700-5ab4-4cb1-fa66-99cfb6d091d6"
+        "outputId": "eeeb71c5-927a-4c62-8b8b-174a3a375b1f"
       },
       "source": [
         "e = GridWorld()\n",
         "e.reset()\n",
         "e.plot()"
       ],
-      "execution_count": 31,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,7 +232,7 @@
         "  j = int(len(x) / num_bins)\n",
         "  return np.array([np.sum(x[i * j:(i + 1) * j]) for i in range(num_bins)])"
       ],
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -269,7 +267,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "W_hripYUVpOs"
       },
       "source": [
@@ -280,7 +277,7 @@
         "    rs: the np random state.\n",
         "  \"\"\" \n",
         "  # YOUR CODE GOES HERE.\n",
-        "  return \n",
+        "  return rs.choice(actions)\n",
         "\n",
         "\n",
         "def greedy_action(w, x, rs):\n",
@@ -290,7 +287,9 @@
         "    rs: the np random state.\n",
         "  \"\"\" \n",
         "  # YOUR CODE GOES HERE.\n",
-        "  return \n",
+        "  q = jnp.matmul(x,w)\n",
+        "  a = jnp.flatnonzero(q == jnp.max(q))\n",
+        "  return a[0]\n",
         "\n",
         "\n",
         "def epsilon_greedy(w, x, rs, epsilon=0.1):\n",
@@ -301,9 +300,11 @@
         "    epsilon: the probability of taking a random action.\n",
         "  \"\"\" \n",
         "  # YOUR CODE GOES HERE.\n",
-        "  return"
+        "  if rs.rand() < epsilon:\n",
+        "    return rs.choice(jnp.shape(w)[-1])\n",
+        "  return greedy_action(w,x,rs)"
       ],
-      "execution_count": 33,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -326,11 +327,24 @@
         "random_state_visitation = # YOUR CODE GOES HERE."
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "pDW2del1Q5lt"
+        "id": "pDW2del1Q5lt",
+        "outputId": "3f83f45c-2ca9-44e9-e144-475ad415a842",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-13258973da9d>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    actions = # YOUR CODE GOES HERE.\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -346,7 +360,6 @@
         "greedy_state_visitation = # YOUR CODE GOES HERE."
       ],
       "metadata": {
-        "cellView": "form",
         "id": "0g7HJVfzRz3S"
       },
       "execution_count": null,
@@ -366,7 +379,6 @@
         "epsilon_greedy_state_visitation = # YOUR CODE GOES HERE."
       ],
       "metadata": {
-        "cellView": "form",
         "id": "ICZ8qB-MSAV8"
       },
       "execution_count": null,
@@ -397,7 +409,7 @@
         "plt.bar(np.arange(env.num_states), epsilon_greedy_state_visitation, label=r'$\\varepsilon$-Greedy')\n",
         "plt.legend()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +629,7 @@
         "  ax.set_axis_off()\n",
         "  plt.plot()\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +713,7 @@
         "  else:\n",
         "    last_x_w = x_w"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +729,7 @@
       "source": [
         "plot_qvals(env, agent)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -777,7 +789,7 @@
         "  else:\n",
         "    last_x_w = x_w"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +805,7 @@
       "source": [
         "plot_qvals(env, agent)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -894,7 +906,7 @@
         "  else:\n",
         "    last_x_w = x_w"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +922,7 @@
       "source": [
         "plot_qvals(env, agent)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -939,7 +951,7 @@
       "source": [
         "plot_greedy_policy(env, agent)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +992,7 @@
         "ax.set_ylabel('Steps to Goal')\n",
         "ax.legend()"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
