SARSA update added

--- a/NAAMII_2021_RL_Project.ipynb
+++ b/NAAMII_2021_RL_Project.ipynb
@@ -71,7 +71,7 @@
         "import matplotlib.cm as cm\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
         "\n",
         "    ax.grid(which='major', linestyle='--')\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
         "e.reset()\n",
         "e.plot()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -232,7 +232,7 @@
         "  j = int(len(x) / num_bins)\n",
         "  return np.array([np.sum(x[i * j:(i + 1) * j]) for i in range(num_bins)])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
         "    return rs.choice(jnp.shape(w)[-1])\n",
         "  return greedy_action(w,x,rs)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
         },
         "outputId": "7cec4915-8101-4be8-c368-cda182310774"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +374,7 @@
         },
         "outputId": "fbc3a9b7-c47e-40fc-ad1d-3cbd5acc97bc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +438,7 @@
         },
         "outputId": "590ad7f6-bf14-46e6-d995-1c341959cbbb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
         "plt.bar(np.arange(env.num_states), epsilon_greedy_state_visitation, label=r'$\\varepsilon$-Greedy')\n",
         "plt.legend()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "as4Z29cyJp4I"
+        "id": "as4Z29cyJp4I",
+        "cellView": "form"
       },
       "source": [
         "#@title Visualization code\n",
@@ -694,7 +695,7 @@
         "  ax.set_axis_off()\n",
         "  plt.plot()\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -727,13 +728,16 @@
         "\n",
         "  def update(self, last_x_w, last_a, reward, x_w, a, done):\n",
         "    # YOUR CODE GOES HERE.\n",
+        "    if not done:\n",
+        "      self.w_q[np.argmax(last_x_w), last_a] = self.w_q[np.argmax(last_x_w), last_a] + self.alpha_w(reward + self.discount*self.w_q[np.argmax(x_w), a] - self.w_q[np.argmax(last_x_w), last_a]) \n",
         "\n",
+        "    if done:\n",
+        "      self.w_q[np.argmax(last_x_w), last_a] = self.w_q[np.argmax(last_x_w), last_a]\n",
         "  def value(self, x_w, action):\n",
         "    # YOUR CODE GOES HERE.\n",
         "    return "
       ],
       "metadata": {
-        "cellView": "form",
         "id": "POTdnkcuSpqE",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -741,7 +745,7 @@
         },
         "outputId": "31a030a0-07ca-4ada-f023-918db72762e3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
